# src/main/java/srl/anagrafica2/validation/ValidationService.java
@@ -1,12 +1,33 @@
 package srl.anagrafica2.validation;
 
-import srl.anagrafica.demo.openapi.model.ProgettoDTO;
+import java.util.regex.Pattern;
 
+import org.springframework.stereotype.Service;
+
+import lombok.RequiredArgsConstructor;
+import srl.anagrafica.demo.openapi.model.ProgettoDTO;
+import srl.anagrafica2.utility.Costants;
+
+
+@Service
+@RequiredArgsConstructor
 public class ValidationService {
+	
+	private boolean verStringa(String stringa) {
+		return Pattern.matches(Costants.VER_STRINGA, stringa);
+	}
 
 	public boolean validaDati(ProgettoDTO progettoDTO) {
-		// TODO Auto-generated method stub
+		
+		
+		
+		
 		return false;
 	}
+
+	public boolean associato(Long idLavoratore) {
+		return false;
+	}
+
 
 }
