# swagger.yml
@@ -86,7 +86,7 @@ paths:
           type: integer
           format: int64
       responses:
-        '200':
+        '201':
           description: Progetto Cancellato
           content:
             application/json:
@@ -100,14 +100,14 @@ paths:
       description: Modifica un progetto ricevendo un id
       operationId: AssociaProgettoLavoratore
       parameters:
-        - name: id
+        - name: idProgetto
           in: path
           description: ID del progetto
           required: true
           schema:
             type: integer
             format: int64
-        - name: id2
+        - name: idLavoratore
           in: path
           description: ID del Lavoratore
           required: true
@@ -122,7 +122,7 @@ paths:
               $ref: '#/components/schemas/progettoDTO'
         required: true
       responses:
-        '200':
+        '201':
           description: Modifica riuscita
           content:
             application/json:
@@ -130,19 +130,20 @@ paths:
                 $ref: '#/components/schemas/progettoDTO'
         '401':
           description: Progetto not found
+          
     delete:
-      summary: Modifica un progetto
-      description: Modifica un progetto ricevendo un id
+      summary: Rimovi un lavoratore associato
+      description: Rimuove il lavoratore associato
       operationId: RimoviProgettoLavoratore
       parameters:
-        - name: id
+        - name: idProgetto
           in: path
           description: ID del progetto
           required: true
           schema:
             type: integer
             format: int64
-        - name: id2
+        - name: idLavoratore
           in: path
           description: ID del Lavoratore
           required: true
@@ -150,12 +151,12 @@ paths:
             type: integer
             format: int64
       responses:
-        '200':
+        '201':
           description: Rimozione riuscita
           content:
             application/json:
               schema:
-                $ref: '#/components/schemas/progettoDTO'
+                type: string
         '401':
           description: Progetto not found
         
@@ -169,6 +170,7 @@ components:
           items:
             type: integer
           example: [1,2,3]
+          
         dataInizio:
           type: string
           example: 2011-12-03
