# target/generated-sources/openapi/src/main/java/srl/anagrafica/demo/openapi/api/ProgettoApiDelegate.java
@@ -16,7 +16,7 @@ import java.util.Optional;
  * A delegate to be called by the {@link ProgettoApiController}}.
  * Implement this interface with a {@link org.springframework.stereotype.Service} annotated class.
  */
-@javax.annotation.Generated(value = "org.openapitools.codegen.languages.SpringCodegen", date = "2022-12-15T15:09:32.274434100+01:00[Europe/Paris]")
+@javax.annotation.Generated(value = "org.openapitools.codegen.languages.SpringCodegen", date = "2022-12-20T17:37:40.904146300+01:00[Europe/Paris]")
 public interface ProgettoApiDelegate {
 
     default Optional<NativeWebRequest> getRequest() {
@@ -47,18 +47,18 @@ public interface ProgettoApiDelegate {
     }
 
     /**
-     * PUT /progetto/associa/{id}/{id2} : Modifica un progetto
+     * PUT /progetto/associa/{idProgetto}/{idLavoratore} : Modifica un progetto
      * Modifica un progetto ricevendo un id
      *
-     * @param id ID del progetto (required)
-     * @param id2 ID del Lavoratore (required)
+     * @param idProgetto ID del progetto (required)
+     * @param idLavoratore ID del Lavoratore (required)
      * @param progettoDTO Aggiorna il progetto (required)
-     * @return Modifica riuscita (status code 200)
+     * @return Modifica riuscita (status code 201)
      *         or Progetto not found (status code 401)
      * @see ProgettoApi#associaProgettoLavoratore
      */
-    default ResponseEntity<ProgettoDTO> associaProgettoLavoratore(Long id,
-        Long id2,
+    default ResponseEntity<ProgettoDTO> associaProgettoLavoratore(Long idProgetto,
+        Long idLavoratore,
         ProgettoDTO progettoDTO) {
         getRequest().ifPresent(request -> {
             for (MediaType mediaType: MediaType.parseMediaTypes(request.getHeader("Accept"))) {
@@ -78,7 +78,7 @@ public interface ProgettoApiDelegate {
      * Cancella una persona ricevando l&#39;id
      *
      * @param id ID del progetto da cancellare (required)
-     * @return Progetto Cancellato (status code 200)
+     * @return Progetto Cancellato (status code 201)
      *         or Progetto non trovato (status code 401)
      * @see ProgettoApi#cancellaProgettoId
      */
@@ -135,26 +135,17 @@ public interface ProgettoApiDelegate {
     }
 
     /**
-     * DELETE /progetto/associa/{id}/{id2} : Modifica un progetto
-     * Modifica un progetto ricevendo un id
+     * DELETE /progetto/associa/{idProgetto}/{idLavoratore} : Rimovi un lavoratore associato
+     * Rimuove il lavoratore associato
      *
-     * @param id ID del progetto (required)
-     * @param id2 ID del Lavoratore (required)
-     * @return Rimozione riuscita (status code 200)
+     * @param idProgetto ID del progetto (required)
+     * @param idLavoratore ID del Lavoratore (required)
+     * @return Rimozione riuscita (status code 201)
      *         or Progetto not found (status code 401)
      * @see ProgettoApi#rimoviProgettoLavoratore
      */
-    default ResponseEntity<ProgettoDTO> rimoviProgettoLavoratore(Long id,
-        Long id2) {
-        getRequest().ifPresent(request -> {
-            for (MediaType mediaType: MediaType.parseMediaTypes(request.getHeader("Accept"))) {
-                if (mediaType.isCompatibleWith(MediaType.valueOf("application/json"))) {
-                    String exampleString = "{ \"dataInizio\" : \"2011-12-03\", \"listaLavoratori\" : [ 1, 2, 3 ], \"dataFine\" : \"2011-12-03\", \"budget\" : 500.0 }";
-                    ApiUtil.setExampleResponse(request, "application/json", exampleString);
-                    break;
-                }
-            }
-        });
+    default ResponseEntity<String> rimoviProgettoLavoratore(Long idProgetto,
+        Long idLavoratore) {
         return new ResponseEntity<>(HttpStatus.NOT_IMPLEMENTED);
 
     }
